# Marwin2.0

./: badwords.py  bot.service  main.py  pyproject.toml  requirements.txt  settings.json  settings.py  token.txt
