[tool.poetry]
name = "repl_python3_beta_Marwin"
version = "0.1.0"
description = ""
authors = ["Aaron Santa Cruz <aaron.santacruz03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
axju-jokes = "^1.0.3"
pyjokes = "^0.6.0"
"discord.py" = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
